--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -247,7 +247,9 @@ h6 {
 #hero .hero-container {
   position: relative;
   z-index: 2;
-  min-width: 550px;
+  min-width: 300px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 #hero h1 {
@@ -270,6 +272,14 @@ h6 {
   padding-bottom: 4px;
   letter-spacing: 1px;
   border-bottom: 3px solid #149ddd;
+}
+
+@media (min-width: 1024px) {
+  #hero .hero-container {
+    min-width: 550px;
+    padding-left: 0px;
+    padding-right: 0px;
+  }
 }
 
 @media (min-width: 1024px) {
