--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -798,7 +798,7 @@ section {
 }
 
 .testimonials .testimonial-item .quote-icon-right {
-  display: inline-block;
+  display: block;
   right: -5px;
   position: relative;
   top: 10px;
