--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -233,6 +233,12 @@ h6 {
   background-size: cover;
 }
 
+@media (max-width: 768px) {
+  #hero {
+    background-position-x: 70%;
+  }
+}
+
 #hero:before {
   content: "";
   background: rgba(5, 13, 24, 0.3);
